--- a/api/package.json
+++ b/api/package.json
@@ -10,13 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^0.7.1",
-    "JSONStream": "^1.3.1",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "mysql2": "^1.2.0",
-    "shortid": "^2.2.8"
+    "mysql2": "^1.2.0"
   },
   "devDependencies": {
     "now": "^4.10.2"
